GearsetPOC/force-app/main/default/objects/CSAT_Email__mdt/CSAT_Email__mdt.object-meta.xml
<CustomObject>
    <label>CSAT Email</label>
    <pluralLabel>CSAT Emails</pluralLabel>
</CustomObject>