GearsetPOC/force-app/main/default/objects/CSAT_Email__mdt/fields/Default_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Default_Email_Template__c</fullName>
    <label>Default Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>