GearsetPOC/force-app/main/default/objects/CSAT_Email__mdt/fields/Dutch_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Dutch_Email_Template__c</fullName>
    <label>Dutch Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>