GearsetPOC/force-app/main/default/objects/CSAT_Email__mdt/fields/English_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>English_Email_Template__c</fullName>
    <label>English Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>