GearsetPOC/force-app/main/default/objects/CSAT_Email__mdt/fields/Excluded_Case_Origins__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Case_Origins__c</fullName>
    <label>Excluded Case Origins</label>
    <type>TextArea</type>
</CustomField>