GearsetPOC/force-app/main/default/objects/CSAT_Email__mdt/fields/Excluded_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Record_Types__c</fullName>
    <label>Excluded Record Types</label>
    <type>TextArea</type>
</CustomField>