GearsetPOC/force-app/main/default/objects/CSAT_Email__mdt/fields/French_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>French_Email_Template__c</fullName>
    <label>French Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>