GearsetPOC/force-app/main/default/objects/CSAT_Email__mdt/fields/German_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>German_Email_Template__c</fullName>
    <label>German Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>