GearsetPOC/force-app/main/default/objects/CSAT_Email__mdt/fields/No_days_to_exclude_CSAT_send__c.field-meta.xml
<CustomField>
    <fullName>No_days_to_exclude_CSAT_send__c</fullName>
    <label>No days to exclude CSAT send</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>